/*
 * Copyright 2022 Team GALAXIUS
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package dev.galaxius.mnrega.composeapp.component.text

import androidx.compose.material.MaterialTheme
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.text.TextStyle
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.unit.sp

@Composable
fun NoteTitleField(
    modifier: Modifier = Modifier,
    value: String = "",
    onTextChange: (String) -> Unit
) {
    BasicMnregaTextField(
        modifier,
        value = value,
        label = "Title",
        onTextChange = onTextChange,
        textStyle = MaterialTheme.typography.h6.copy(fontWeight = FontWeight.Bold),
        maxLines = 2
    )
}

@Composable
fun NoteField(
    modifier: Modifier = Modifier,
    value: String = "",
    onTextChange: (String) -> Unit
) {
    BasicMnregaTextField(
        modifier,
        value = value,
        label = "Write attendance here",
        onTextChange = onTextChange,
        textStyle = TextStyle(fontSize = 18.sp, fontWeight = FontWeight.Light)
    )
}
