...
                IconButton(
                    modifier = Modifier.padding(start = 4.dp),
                    onClick = onNavigateUp
                ) {
                    Icon(
                        painterResource(R.drawable.ic_back),
                        "Back",
                        tint = MaterialTheme.colors.onPrimary
                    )
                }
            }
            navigationIcon
        },
...
