...
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>

    <!-- Text -->
    <string name="text_login">Login</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_save">Save</string>
    <string name="text_create_account">Don\'t have an account?  <font color='#7885FF'>Sign up</font></string>
    <string name="text_login_account">Already have an account?  <font color='#7885FF'>Login</font></string>
    <string name="text_registration">Create account</string>
    <string name="text_register">Register</string>
    <string name="text_welcome">Welcome to MNREGA!</string>
    <string name="text_welcome_back">Welcome back</string>
...
