...
    }
}

@Preview
@Composable
fun PreviewNoteCard() = MnregaPreview {
    NoteCard(title = "Lorem Ipsum", attendance = "Here is attendance body...", onNoteClick = {})
}

